objects/Industry_Standard_SLA__mdt.object
<CustomObject>
    <fields>
        <fullName>After__c</fullName>
        <description>To calculate Date for case created after 2 PM</description>
        <label>After</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Before__c</fullName>
        <description>To Calculate Date for case created before 2 PM</description>
        <label>Before</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service__c</fullName>
        <description>Case Type</description>
        <label>Service</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Industry Standard SLA</label>
    <listViews>
        <fullName>Srishti_View</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>NamespacePrefix</columns>
        <columns>After__c</columns>
        <columns>Before__c</columns>
        <columns>Service__c</columns>
        <columns>IsProtected</columns>
        <filterScope>Everything</filterScope>
        <label>Srishti View</label>
    </listViews>
    <pluralLabel>Industry Standard SLAs</pluralLabel>
</CustomObject>